--- a/lingo/templates/links.html
+++ b/lingo/templates/links.html
@@ -5,7 +5,7 @@
     <body>
         <h2>Links</h2>
         {{range .Links}}
-            <a href={{.URL}}>{{.Name}}</a>
+        <a href={{.URL}}>{{.Name}}</a> - <a href="/edit/link/{{.ID}}">Edit</a>
         {{end}}
     </body>
 </html>
