feat: login route

--- a/lingo/templates/signup.html
+++ b/lingo/templates/signup.html
@@ -1,7 +1,9 @@
 <html>
     <head>
+        <title>Lingo</title>
     </head>
     <body>
+        <h1>Lingo</h1>
         {{.Data}}
         <form action="/auth/signup" method="POST">
             <label>Username</label>
