feat: delete links

--- a/lingo/templates/links.html
+++ b/lingo/templates/links.html
@@ -8,10 +8,15 @@
             <h1>Hello, {{.User.Username}}</h1>
             <h2>Links</h2>
             <a href="/add/link">Add Link</a>
+            <ul>
             {{range .Links}}
-            <a href={{.URL}}>{{.Name}}</a> -
-            <a href="/edit/link/{{.ID}}">Edit</a>
+            <li>
+                <a href={{.URL}}>{{.Name}}</a> 
+            </li>
+                <a href="/edit/link/{{.ID}}">Edit</a>
+                <a href="/delete/link/{{.ID}}">Delete</a>
             {{end}}
+            </ul>
         {{else}}
             <a href="/auth/login-form">Login</a>
             <a href="/auth/signup-form">Signup</a>
