chore: added extendable templates

--- a/lingo/templates/deleteLink.html
+++ b/lingo/templates/deleteLink.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Lingo</title>
-</head>
-<body>
+{{define "main"}}
     <h1>Are you sure you want to delete this LINK?</h1>
     <form method="POST" action='#'>
         <div>
@@ -13,5 +7,4 @@
         </div>
         <button type="submit">DELETE</button>
     </form>
-</body>
-</html>
+{{end}}
