--- a/lingo/templates/profile.html
+++ b/lingo/templates/profile.html
@@ -1,8 +1,4 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <h1>Lingo</h1>
-        {{.Data}}
-    </body>
-</html>
+{{define "main"}}
+    <h1>Lingo</h1>
+    {{.Data}}
+{{end}}
