--- a/lingo/templates/editLink.html
+++ b/lingo/templates/editLink.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Lingo</title>
-</head>
-<body>
+{{define "main"}}
     <h1>Edit a link</h1>
     <form method="POST" action='#'>
         <div>
@@ -15,5 +9,4 @@
         </div>
         <button type="submit">Save</button>
     </form>
-</body>
-</html>
+{{end}}
