--- a/lingo/templates/login.html
+++ b/lingo/templates/login.html
@@ -1,16 +1,11 @@
-<html>
-    <head>
-        <title>Lingo</title>
-    </head>
-    <body>
-        <h1>Lingo</h1>
-        {{.Data}}
-        <form action="/auth/login" method="POST">
-            <label>Email</label>
-            <input type="email" name="email" />
-            <label>Password</label>
-            <input type="password" name="password" />
-            <button type="submit">Login</button>
-        </form>
-    </body>
-</html>
+{{define "main"}}
+    <h1>Lingo</h1>
+    {{.Data}}
+    <form action="/auth/login" method="POST">
+        <label>Email</label>
+        <input type="email" name="email" />
+        <label>Password</label>
+        <input type="password" name="password" />
+        <button type="submit">Login</button>
+    </form>
+{{end}}
